# events-collector

./: .gitignore  README.md  requirements.txt  setup.cfg
collector_backend/: __init__.py  event.py  event_log_helper.py
tests/: conftest.py  test_api.py
tests/json/: broken_format.json  correct.json  incorrect_format.json
