[metadata]
name = events-collector
version = 1.0.0
url = https://github.com/CreatorOh/events-collector
maintainer_email = autonomous.creator.oh@gmail.com

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    pytest
    flask-restx
    tzlocal

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    collector_backend
